--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
@@ -21,8 +22,17 @@ test {
 
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
+        "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
+        "MANAGEMENT_HEALTH_PROBES_ENABLED": true,
+
 ])
 
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
+        "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
+        "MANAGEMENT_HEALTH_PROBES_ENABLED": true,
+
 ])
+springBoot {
+    buildInfo()
+}
