--- a/ci/pipeline.yaml
+++ b/ci/pipeline.yaml
@@ -43,9 +43,9 @@ jobs:
                 BUILD_NUMBER=`cat version/number`
 
                 cd source-code
-                ./gradlew bootBuildImage --imageName=saumyaraju/pal-tracker:build-${BUILD_NUMBER}
-                docker login -u ((DOCKER_HUB_USERNAME)) -p ((DOCKER_HUB_PASSWORD))
-                docker push ((DOCKER_HUB_USERNAME))/pal-tracker:build-${BUILD_NUMBER}
+                ./gradlew bootBuildImage --imageName=localhost:5000/pal-tracker:build-${BUILD_NUMBER}
+                #docker login -u ((DOCKER_HUB_USERNAME)) -p ((DOCKER_HUB_PASSWORD))
+                docker push localhost:5000/pal-tracker:build-${BUILD_NUMBER}
   - name: deploy-to-review
     plan:
       - get: source-code
@@ -55,6 +55,30 @@ jobs:
       - get: version
         passed:
           - build-pack-and-publish
+      - task: deploy-to-review
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: pivotaleducation/deploy-to-k8s
+          inputs:
+            - name: source-code
+            - name: version
+          run:
+            path: sh
+            args:
+              - -exc
+              - |
+                mkdir -p ~/.kube
+                echo '((KUBECONFIG))' > ~/.kube/config
+
+                BUILD_NUMBER=`cat version/number`
+
+                cd source-code
+                grep "concourse.run_number" k8s/environments/review/deployment.yaml
+                sed -i "s/concourse.run_number/${BUILD_NUMBER}/g" k8s/environments/review/deployment.yaml
+                kubectl apply -k k8s/environments/review
 resources:
   - name: source-code
     type: git
