--- a/k8s/environments/review/deployment.yaml
+++ b/k8s/environments/review/deployment.yaml
@@ -7,4 +7,4 @@ spec:
     spec:
       containers:
         - name: pal-tracker-container
-          image: saumyaraju/pal-tracker:build-concourse.run_number
+          image: localhost:5000/pal-tracker:build-concourse.run_number
