--- a/ci/pipeline.yaml
+++ b/ci/pipeline.yaml
@@ -41,7 +41,7 @@ jobs:
                 start_docker "5" "5" "" ""
 
                 BUILD_NUMBER=`cat version/number`
-
+                docker run -d -p 5000:5000 --name registry registry:2
                 cd source-code
                 ./gradlew bootBuildImage --imageName=localhost:5000/pal-tracker:build-${BUILD_NUMBER}
                 #docker login -u ((DOCKER_HUB_USERNAME)) -p ((DOCKER_HUB_PASSWORD))
